# MLOPS-assignment-1

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
experiments/: train.py
experiments/configs/: train_config.yaml
scripts/: create_pcam_mlops_repo.py  torch_example.py
scripts/plotting/: plot_results_csv.py
src/ml_core/models/: __init__.py  mlp.py
src/ml_core/solver/: trainer.py
src/ml_core/utils/: __init__.py  logging.py  tracker.py
tests/: test_data_loader.py  test_imports.py  test_model_shapes.py
